force-app/main/default/objects/ASF_TriggerDeactivationSettings__c/fields/ASF_Deactivate_Case_Trigger__c.field-meta.xml
<CustomField>
    <fullName>ASF_Deactivate_Case_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Case Trigger</label>
    <type>Checkbox</type>
</CustomField>