force-app/main/default/objects/ASF_TriggerDeactivationSettings__c/fields/Deactivate_AgentWork_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_AgentWork_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate AgentWork Trigger</label>
    <type>Checkbox</type>
</CustomField>