force-app/main/default/objects/ASF_TriggerDeactivationSettings__c/fields/Deactivate_Bulk_Case_Processor_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Bulk_Case_Processor_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Bulk Case Processor Trigger</label>
    <type>Checkbox</type>
</CustomField>