force-app/main/default/objects/ASF_TriggerDeactivationSettings__c/fields/Deactivate_Dispositions_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Dispositions_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Dispositions Trigger</label>
    <type>Checkbox</type>
</CustomField>