force-app/main/default/objects/ASF_TriggerDeactivationSettings__c/fields/Deactivate_Prev_Policy_Detail_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Prev_Policy_Detail_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Prev Policy Detail Trigger</label>
    <type>Checkbox</type>
</CustomField>